<resources>
    <string name="app_name">VacciMate</string>
    <string name="action_settings">Settings</string>

    <!-- comment -->

    <string name="home">Home</string>
    <string name="registration">Registration</string>

    <string name="nationalId">National ID</string>
    <string name="username">Username</string>
    <string name="bdate">Birth date</string>
    <string name="date">Date</string>

    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="loggedInAs">Logged in as:</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">Login failed</string>
    <string name="pin">PIN</string>
    <string name="country">Country</string>
    <string name="gender">Gender</string>
    <string name="upcomingEvents">Upcoming events</string>
    <string name="myVaccinations">My Vaccinations</string>
    <string name="newRecord">New Record</string>
    <string name="programEventId">Program Event ID</string>
    <string name="category">Category</string>
    <string name="substance">Substance</string>
    <string name="note">Note</string>
    <string name="addnewrecord">Add New Record</string>
</resources>