<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewRecordActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/newrec_topToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/newrec_scrollview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newrec_topToolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/linearLayout1"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:orientation="vertical"
                android:layout_gravity="center">

                <TextView
                    android:id="@+id/textView_forProgramEventId"
                    android:layout_width="match_parent"
                    android:layout_height="34dp"
                    android:text="@string/programEventId" />

                <Spinner
                    android:id="@+id/newrec_in_programEventId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:orientation="vertical"
                android:layout_gravity="center">

                <TextView
                    android:id="@+id/textView_category"
                    android:layout_width="match_parent"
                    android:layout_height="34dp"
                    android:text="@string/category" />

                <Spinner
                    android:id="@+id/newrec_in_category"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:orientation="vertical"
                android:layout_gravity="center">

                <TextView
                    android:id="@+id/textView_date"
                    android:layout_width="match_parent"
                    android:layout_height="34dp"
                    android:text="@string/date" />

                <EditText
                    android:id="@+id/newrec_in_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="date"
                    android:ems="10" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout4"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:orientation="vertical"
                android:layout_gravity="center">

                <TextView
                    android:id="@+id/textView_substance"
                    android:layout_width="match_parent"
                    android:layout_height="34dp"
                    android:text="@string/substance" />

                <EditText
                    android:id="@+id/newrec_in_substance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:ems="10" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout5"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:orientation="vertical"
                android:layout_gravity="center">

                <TextView
                    android:id="@+id/textView_note"
                    android:layout_width="match_parent"
                    android:layout_height="34dp"
                    android:text="@string/note" />

                <EditText
                    android:id="@+id/newrec_in_note"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:ems="10" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout6"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:orientation="vertical"
                android:layout_gravity="center">

                <Button
                    android:id="@+id/btnNewRecord"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="btnNewRecordOnClick"
                    android:text="@string/addnewrecord" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>