<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_toolbar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/main_topToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="368dp"
        android:layout_height="63dp"
        android:orientation="vertical"
        android:layout_margin="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_topToolbar"
        app:layout_constraintVertical_bias="0.05">

        <LinearLayout
            android:id="@+id/main_userInfo_rowNationalId"
            android:layout_width="match_parent"
            android:layout_height="21dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/main_userInfo_rowNationalId_colKey"
                android:layout_width="184dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/nationalId" />

            <TextView
                android:id="@+id/main_userInfo_rowNationalId_colVal"
                android:layout_width="184dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/main_userInfo_rowUsername"
            android:layout_width="match_parent"
            android:layout_height="21dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/main_userInfo_rowUsername_colKey"
                android:layout_width="184dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/username" />

            <TextView
                android:id="@+id/main_userInfo_rowUsername_colVal"
                android:layout_width="184dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/main_userInfo_rowBdate"
            android:layout_width="match_parent"
            android:layout_height="21dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/main_userInfo_rowBdate_colKey"
                android:layout_width="184dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/bdate" />

            <TextView
                android:id="@+id/main_userInfo_rowBdate_colVal"
                android:layout_width="184dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/main_errorLog"
        android:layout_width="331dp"
        android:layout_height="76dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout5"
        app:layout_constraintVertical_bias="0.169" />
</androidx.constraintlayout.widget.ConstraintLayout>